// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumb /> it renders \`props.current\` 1`] = `
<ul
  className="breadcrumb"
>
  <li
    className="breadcrumb-item"
  >
    <a
      className="breadcrumb-link"
      href="/"
    >
      <i
        className="fa fa-home"
      />
    </a>
  </li>
  <li
    className="breadcrumb-item active"
  >
    Test
  </li>
</ul>
`;

exports[`<BreadCrumb /> it renders without props 1`] = `
<ul
  className="breadcrumb"
>
  <li
    className="breadcrumb-item"
  >
    <a
      className="breadcrumb-link"
      href="/"
    >
      <i
        className="fa fa-home"
      />
    </a>
  </li>
</ul>
`;
